--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <button class="nav-link fs-5 btn btn-link" routerLink="/saiba-mais" routerLinkActive="active">Saiba mais</button>
         </li>
+        <li class="nav-item">
+          <button class="nav-link fs-5 btn btn-link" routerLink="/usuarios-listagem" routerLinkActive="active">Gestão</button>
+        </li>
       </ul>
     </div>
   </div>
