--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -10,7 +10,7 @@
           <button class="nav-link fs-5 btn btn-link" routerLink="/cadastro" routerLinkActive="active">Cadastre-se</button>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-5" routerLink="/cadastroLivro">Cadastro de Livros</a>
+          <a class="nav-link fs-5" routerLink="/livro-cadastro">Cadastro de Livros</a>
         </li>
         <li class="nav-item">
           <button class="nav-link fs-5 btn btn-link" routerLink="/saiba-mais" routerLinkActive="active">Saiba mais</button>
