--- a/frontend/src/app/pages/usuarios-listagem/usuarios-listagem.component.html
+++ b/frontend/src/app/pages/usuarios-listagem/usuarios-listagem.component.html
@@ -1,6 +1,6 @@
 <div class="usuario-lista-container">
     <div class="lista-wrapper">
-      <h2>Lista de Usuários</h2>
+      <h2>Usuários</h2>
   
       <div *ngIf="carregando" class="loading">Carregando usuários...</div>
   
