--- a/frontend/src/app/pages/login-modal/login-modal.component.html
+++ b/frontend/src/app/pages/login-modal/login-modal.component.html
@@ -1,25 +1,38 @@
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form (ngSubmit)="login()">
         <div class="modal-header">
           <h5 class="modal-title" id="loginModalLabel">Login Administrativo</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
+
         <div class="modal-body">
           <div class="mb-3">
             <label>Usuário</label>
-            <input type="usuario" class="form-control" [(ngModel)]="usuario" />
+            <input type="text"
+                   class="form-control"
+                   [(ngModel)]="usuario"
+                   name="usuario"
+                   required />
           </div>
+
           <div class="mb-3">
             <label>Senha</label>
-            <input type="password" class="form-control" [(ngModel)]="senha" />
+            <input type="password"
+                   class="form-control"
+                   [(ngModel)]="senha"
+                   name="senha"
+                   required />
           </div>
+
           <div *ngIf="erro" class="text-danger">Credenciais inválidas</div>
         </div>
+
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" (click)="login()">Entrar</button>
+          <button type="submit" class="btn btn-primary">Entrar</button>
         </div>
-      </div>
+      </form>
     </div>
   </div>
-  
+</div>
