--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -7,13 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <button class="nav-link fs-5 btn btn-link" routerLink="/cadastro" routerLinkActive="active">Cadastre-se</button>
+          <button class="nav-link fs-5 btn btn-link" routerLink="/estante-livros">Estante</button>
+        </li>
+        <li class="nav-item">
+          <button class="nav-link fs-5 btn btn-link" routerLink="/saiba-mais" routerLinkActive="active">Saiba mais</button>
         </li>
         <li class="nav-item">
           <a class="nav-link fs-5" routerLink="/livro-cadastro" *ngIf="isLoggedIn">Cadastro de Livros</a>
         </li>
         <li class="nav-item">
-          <button class="nav-link fs-5 btn btn-link" routerLink="/saiba-mais" routerLinkActive="active">Saiba mais</button>
+          <button class="nav-link fs-5 btn btn-link" routerLink="/cadastro" routerLinkActive="active">Cadastre-se</button>
         </li>
         <li class="nav-item" *ngIf="isAdmin">
           <button class="nav-link fs-5 btn btn-link" routerLink="/usuarios-listagem" routerLinkActive="active">Gestão Usuários</button>
